fix:updated swagger code for rest password
